Changes in 0.70.4:
  o Build Changes (cvc)
    * CompilePython has been fixed to accept macros in its arguments.
      This bug cropped up in 0.70.3

Changes in 0.70.3:
  o Client Changes (conary)
    * Conary now works harder to avoid having separate erase/installs,
      instead preferring to link those up into one update when possible.
    * Conary configuration now supports contexts.  Contexts are defined in 
      sections starting with a [<name>] line, and provide contextual 
      configurations for certain variables, defined in the man page.  All 
      configuration options after the [<name>] will be associated with that 
      context, and will override the default configuration when that context 
      is active.  The current context can be selected by using the --context 
      parameter, or by setting the CONARY_CONTEXT environment variable. 
    * 'conary config --show-contexts' will display the available contexts
  o Build Changes (cvc)
    * A local cook of a trove foo will ensure that the changeset created is 
      installable on your local system, by making sure the version number 
      created is unique.
    * The builddir is no longer allowed to appear in ELF RPATHs.
    * The build documentation strings have been significantly updated
      to document the fact that for most strings, a relative path
      is relative to the builddir, but an absolute path is relative
      to the destdir.
    * The ManualConfigure action now sets the standard Configure
      environment.
    * cvc will allow you to cook a trove locally even when you are unable 
      to access the trove's source repository
  * Common Changes:
    * Version closeness was improperly measured for troves on different
      branches when then label structure was identical
  o Repository Changes
    * Repository now has a config flag called requireSigs. Setting it to
      True will force all troves to have valid package signatures.  Troves