@@ -28,7 +28,8 @@ kid_files =	add_group.kid		\
 		trove_info.kid		\
 		user_admin.kid		\
 		pgp_admin.kid		\
-		pgp_submit_key.kid
+		pgp_submit_key.kid      \
+		pgp_get_key.kid
 
 extra_dist = Makefile
 
