@@ -1,0 +1,27 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<html xmlns:html="http://www.w3.org/1999/xhtml"
+      xmlns:py="http://purl.org/kid/ns#"
+      py:extends="'library.kid'">
+<?python
+# Copyright (c) 2005 rpath, Inc.
+#
+# This program is distributed under the terms of the Common Public License,
+# version 1.0. A copy of this license should have been distributed with this
+# source file in a file called LICENSE. If it is not present, the license
+# is always available at http://www.opensource.org/licenses/cpl.php.
+#
+# This program is distributed in the hope that it will be useful, but
+# without any waranty; without even the implied warranty of merchantability
+# or fitness for a particular purpose. See the Common Public License for
+# full details.
+?>
+    <body>
+        <div id="content">
+            <h2>OpenPGP Key retrieval results for:</h2>
+            <div>${keyId}</div>
+            <pre>
+${keyData}
+            </pre>
+        </div>
+    </body>
+</html>
